# compact_timing_receiver

./: .gitignore  README.md  floor_diagnosis.md  interpolation_characterization.csv  interpolation_diagnosis.md  pyproject.toml  snr_sweep_characterization.csv
compact_timing_receiver/: __init__.py  _matched_filter.py  characterization.py  crlb.py  estimators.py  experiments.py  metrics.py  noise.py  pulse_train.py  sweeps.py
examples/: crlb_characterization.py  interpolation_characterization.py  matched_filter_visualizations.py  phase_1_demo.py  snr_sweep_demo.py
tests/: test_characterization.py  test_characterization_scripts.py  test_crlb.py  test_estimators.py  test_estimators_noisy.py  test_experiments.py  test_matched_filter_visualizations.py  test_metrics.py  test_metrics_integration.py  test_noise.py  test_phase_1_demo.py  test_pulse_train.py  test_snr_sweep_demo.py  test_sweeps.py
